k8s/09-alloy.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: alloy
  namespace: orca
spec:
  selector:
    matchLabels:
      app: alloy
  template:
    metadata:
      labels:
        app: alloy
    spec:
      serviceAccountName: alloy
      containers:
        - name: alloy
          image: grafana/alloy:v1.17.0
          args:
            - "run"
            - "/etc/alloy/config.alloy"
          volumeMounts:
            - name: alloy-config
              mountPath: /etc/alloy
          resources:
            limits:
              memory: 256Mi
            requests:
              memory: 128Mi
      volumes:
        - name: alloy-config
          configMap:
            name: alloy-config
