k8s/06-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: orca
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: orca
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: strafeken/orca-frontend:ORCA_IMAGE_TAG
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 128Mi
            requests:
              memory: 64Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
